--- a/MCCHD_covid_figures_new.Rmd
+++ b/MCCHD_covid_figures_new.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Missoula County COVID-19 Cases"
 author: "Ethan Walker, University of Montana"
-date: "Data as of January 11, 2021"
+date: "Data as of January 28, 2021"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -104,7 +104,7 @@ age_count_plot <- covid_data %>%
      labs(title = "COVID-19 Cases by age group",
           subtitle = paste0("Missoula County, since March 2020. N = ", age_cases, " cases."), 
           y = "Number of cases", x = "Age Group (years)") +
-     scale_y_continuous(breaks = c(seq(0, 2000, 50)), labels = c(seq(0, 2000, 50))) +
+     scale_y_continuous(breaks = c(seq(0, 4000, 100)), labels = c(seq(0, 4000, 100))) +
      coord_flip() +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
@@ -150,7 +150,7 @@ age_count_month_plot <- covid_data %>%
                fill = "gray80", alpha = 0.05) +
       geom_line(aes(week_of_year, group_cases, group = age_group, 
                     color = age_group), size = 1.5) +
-      geom_label(aes(x = Sys.Date()-10, y = 150, 
+      geom_label(aes(x = Sys.Date()-12, y = 150, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
       theme_minimal() +
@@ -214,7 +214,7 @@ age_count_month_plot2 <- covid_data %>%
                fill = "gray80", alpha = 0.05) +
       geom_line(aes(week_of_year, group_cases, group = age_group3, 
                     color = age_group3), size = 1.5) +
-      geom_label(aes(x = Sys.Date()-10, y = 90, 
+      geom_label(aes(x = Sys.Date()-12, y = 90, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
       theme_minimal() +
@@ -252,7 +252,7 @@ age_count_month_plot2
 
 #table(age_count_month_plot2$month_of_year, age_count_month_plot2$age_group3)
 
-#ggsave("C:/R/covid19/age_count_month_plot2.png", width = 10, height = 6)
+#ggsave("C:/R/covid19/age_count_month_plot2.png", width = 12, height = 6)
 ```
 
 \pagebreak  
@@ -271,7 +271,7 @@ age_incidence_plot_bar <- age_incidence %>%
      labs(title = "COVID-19 incidence by age group",
           subtitle = paste0("Missoula County, since March 2020. N = ", age_cases, " cases."),
           y = "Incidence per 100,000 Population", x = "Age Group (years)") +
-     scale_y_continuous(breaks = c(seq(0, 10000, 250)), labels = c(seq(0, 10000, 250))) +
+     scale_y_continuous(breaks = c(seq(0, 15000, 500)), labels = c(seq(0, 15000, 500))) +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
            title = element_text(size = 18, colour = "black"),
@@ -332,7 +332,7 @@ age_incidence_plot_line <- covid_data %>%
         color = "Age group") +
       ylab("Incidence per 100,000") +
       xlab("") +
-      geom_label(aes(x = Sys.Date()-10, y = 650, 
+      geom_label(aes(x = Sys.Date()-12, y = 650, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
       scale_x_date(breaks = seq.Date(from = as.Date("2020-09-02"), 
@@ -406,7 +406,7 @@ age_incidence_plot_line <- covid_data %>%
         color = "Age group") +
       ylab("Incidence per 100,000") +
       xlab("") +
-      geom_label(aes(x = Sys.Date()-10, y = 650, 
+      geom_label(aes(x = Sys.Date()-12, y = 650, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
       scale_x_date(breaks = seq.Date(from = as.Date("2020-09-02"), 
@@ -643,10 +643,6 @@ epi_curve_full <- plot_data %>%
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-06-01"), label = "Phase 2 reopening", vjust = -0.5,
                  y = 100), colour = "black", angle = 90, text = element_text(size=14)) +
-     geom_vline(xintercept = as.numeric(as.Date("2020-07-09")), color = "black", 
-              size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2020-07-09"), label = "Mask Mandate", vjust = -0.5,
-                 y = 100), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-09-07")), color = "black", 
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-09-07"), label = "Labor Day", vjust = -0.5,
@@ -655,9 +651,9 @@ epi_curve_full <- plot_data %>%
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-05-25"), label = "Memorial Day", vjust = -0.5,
                  y = 100), colour = "black", angle = 90, text = element_text(size=14)) +
-     geom_vline(xintercept = as.numeric(as.Date("2020-07-04")), color = "black", 
+     geom_vline(xintercept = as.numeric(as.Date("2020-07-06")), color = "black", 
               size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2020-07-04"), label = "July 4th", vjust = -0.5,
+     geom_text(aes(x = as.Date("2020-07-06"), label = "July 4th + Mask Mandate", vjust = -0.5,
                  y = 100), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-08-19")), color = "black", 
               size = 1, linetype = "dashed") +
@@ -670,7 +666,7 @@ epi_curve_full <- plot_data %>%
      geom_vline(xintercept = as.numeric(as.Date("2020-11-26")), color = "black", 
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-11-26"), label = "Thanksgiving", vjust = -0.5,
-                 y = 70), colour = "black", angle = 90, text = element_text(size=14)) +
+                 y = 100), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-12-25")), color = "black", 
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-12-25"), label = "Christmas", vjust = -0.5,
