--- a/initial_cleaning_new.Rmd
+++ b/initial_cleaning_new.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "MCCHD Covid-19 initial data cleaning"
 author: "Ethan Walker"
-date: "Started 23 Nov 2020, Updated 11 Jan 2021"
+date: "Started 23 Nov 2020, Updated 28 Jan 2021"
 output:
   pdf_document: default
   html_document:
@@ -31,26 +31,16 @@ input_path <- c("C:/Users/ethan.walker/Box/Missoula_COVID19EpiProfile_Working/")
 
 
 covid_data_initial <- 
-   read_xlsx(paste0(input_path, "COVID Data 1.11.21.xlsx"), sheet = 1,
-             range = "A2:AA10000", 
-                        col_names = c("case_id", "case_status", "um_case", "age", "gender", "race", 
-                                      "ethnicity", "zipcode", "healthcare_worker",
-                                      "symptoms", "symptom_type", "symptom_onset_date",
-                                      "test_date", "contact_with_case", "contact_case_number", 
-                                      "epi_linked", "epi_linked_number", "travel_hx",
-                                      "hospitalized", "ventilated", "discharge_date",
-                                      "chronic_conditions", "chronic_conditions_type",
-                                      "number_contacts", "patient_died", 
-                                      "suspected_source", "community_spread"),
-                        col_types = c("text", "text", "text", "text", "text", "text",
+   read_xlsx(paste0(input_path, "COVID Data 1.28.21.xlsx"), sheet = 1,
+             range = "A2:O20000", 
+                        col_names = c("case_id", "case_status", "health_worker", 
+                                      "cong_living", "cong_living_where", "age", 
+                                      "sex", "zipcode", "test_date", "um_student", "race", 
+                                      "ethnicity", "cluster_code", "ever_hosp", "epi_linked"),
+                        col_types = c("text", "text", "text", 
                                       "text", "text", "text",
-                                      "text", "text", "date",
-                                      "date", "text", "text",
-                                      "text", "text", "text",
-                                      "text", "text", "date",
-                                      "text", "text", 
-                                      "text", "text",
-                                      "text", "text"))
+                                      "text", "text", "date", "text", "text",
+                                      "text", "text", "text", "text"))
 ```
 
 
@@ -58,7 +48,7 @@ covid_data_initial <-
 # Clean data
 
 covid_clean <- covid_data_initial %>% 
-   select(case_id, case_status, um_case, age, test_date) %>% 
+   #select(case_id, case_status, age, sex, test_date) %>% 
    filter(!is.na(case_id)) %>% 
    mutate(age = as.numeric(age),
           age_group = cut(age, breaks = c(0, 10, 20, 30, 40, 50, 60, 70, 80, 130),
@@ -81,8 +71,14 @@ covid_clean <- covid_data_initial %>%
           age_group3_percent = as.numeric(age_group3_percent),
           county_pop = as.numeric(119600),
           case = 1,
-          um_case = as.factor(um_case),
+          sex = as.factor(sex),
           case_status = as.factor(case_status),
+          health_worker = as.factor(health_worker),
+          cong_living = as.factor(cong_living),
+          race = as.factor(race),
+          ethnicity = as.factor(ethnicity),
+          ever_hosp = as.factor(ever_hosp),
+          epi_linked = as.factor(epi_linked),
           age_group = as.factor(age_group),
           age_group2 = as.factor(age_group2),
           test_date = ymd(test_date),
